# circube-launcher

./: manifest.bat  package-lock.json  package.json  tailwind.config.js  updater.bat  updater.ps1  vite.config.ts
.github/workflows/: build.yml
.trellis/spec/guides/: cross-layer-thinking-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-17-optimize-download-architecture/: design.md  implement.md  prd.md  task.json
.trellis/workspace/zephyr/: journal-1.md
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  download_engine.rs  download_sources.rs  launcher.rs  main.rs  models.rs  updater.rs  utils.rs
src/components/: TitleBar.vue
src/components/ui/badge/: index.ts
src/components/ui/button/: index.ts
src/components/ui/combobox/: ComboboxAnchor.vue  ComboboxList.vue
src/components/ui/command/: CommandEmpty.vue  CommandInput.vue  CommandItem.vue  CommandList.vue
src/components/ui/dialog/: DialogContent.vue  DialogScrollContent.vue
src/components/ui/popover/: PopoverContent.vue
src/components/ui/slider/: Slider.vue
src/components/ui/spinner/: Spinner.vue
src/router/: index.ts
src/stores/: cache.ts
src/views/: LoadingView.vue  LoginView.vue  MainView.vue  SettingsView.vue
