[package]
name = "circube-launcher"
version = "1.0.0"
description = "Launcher for CirCube"
authors = ["zephyr"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["full"] }
tauri-plugin-opener = "2.5.3"
sysinfo = "0.30"
dirs-next = "2.0"
base64 = "0.22.1"
regex = "1"
url = "2.5"
sha1 = "0.10.6"
futures = "0.3.32"
hex = "0.4.3"
walkdir = "2.5.0"

[profile.release]
opt-level = "s"    # 优化目标：考虑速度的同时优化大小
lto = "fat"        # 启用最激进的链接时优化
codegen-units = 1  # 减少代码生成单元数量，提高优化效果
panic = "abort"    # 使用"abort"而非"unwind"处理恐慌
strip = "symbols"  # 删除符号信息但保留必要的调试信息
