[package]
name = "circube-launcher"
version = "1.0.0"
description = "Launcher for CirCube"
authors = ["zephyr"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-dialog = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
urlencoding = "2.1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tauri-plugin-opener = "2.5.3"
sysinfo = "0.30"
dirs-next = "2.0"
base64 = "0.22.1"
regex = "1"
url = "2.5"
sha1 = "0.10.6"
futures = "0.3.32"
hex = "0.4.3"
walkdir = "2.5.0"
flate2 = "1"

[target.'cfg(windows)'.dependencies]
winreg = "0.50"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
